button load more single candidate

--- a/wp-content/plugins/civi-framework/assets/libs/newgallery/css/style.css
+++ b/wp-content/plugins/civi-framework/assets/libs/newgallery/css/style.css
@@ -104,7 +104,7 @@ a, a:link, a:focus, a:active, a:visited {
 	width: 100%;
 }
 #loadMore a {
-	background: #faa635;
+	background: #065090;
 	border-radius: 3px;
 	color: white;
 	display: inline-block;
