mobile center photos single candidate

--- a/wp-content/plugins/civi-framework/assets/libs/newgallery/css/style.css
+++ b/wp-content/plugins/civi-framework/assets/libs/newgallery/css/style.css
@@ -31,6 +31,7 @@ img {
 	border-bottom: 1px solid #ccc;
 	position: relative;
 	z-index: 1;
+	text-align: center;
 }
 .blogBox .item img {
 	width: 100%;
